<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumo_serial_comm</name>
  <version>0.0.0</version>
  <description>Send and receive serial data to and from zumo. Tx motor commands. Rx gyro z and encoders. </description>
  <maintainer email="21990134+coderkarl@users.noreply.github.com">karl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
